v2/internal/nsz.repo.hu/libc-test/src/api/stdio.o.err
src/api/stdio.c: In function ‘f’:
src/api/stdio.c:68:1: error: ‘gets’ is deprecated [-Werror=deprecated-declarations]
   68 | {char*(*p)(char*) = gets;}
      | ^
In file included from src/api/stdio.c:1:
/usr/include/stdio.h:577:14: note: declared here
  577 | extern char *gets (char *__s) __wur __attribute_deprecated__;
      |              ^~~~
cc1: all warnings being treated as errors
exit status 1
